# dtu-mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yaml  config.yaml  data.dvc  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: styling.yml  tests.yml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
fast_api_deploy_function_files/: filenames.txt  logger.py  main.py  make_dataset.py  requirements.txt  triggering_event.json
reports/: README.md  find_conflictive_chars.ipynb  report.py
src/: __init__.py  predict_model.py  train_model.py
src/app/: main.py
src/app/templates/: index.html  result.html
src/config/: default_config.yaml
src/config/data/: data_config.yaml
src/config/model/: model_config.yaml
src/config/predict/: predict_config.yaml
src/config/train/: train_config.yaml
src/data/: download_models.py  make_dataset.py  make_dataset_2.py
src/models/: model.py
src/utils/: logger.py
tests/: test_download_models.py  test_make_dataset.py  test_model_forward.py  test_save_datasets.py
