[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group 10", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "N", "S", "A", "B"]
ignore = [
    "F821",
    "F841",
    "D100",
    "D107",
    "D211",
    "D212",
    "S301",
    "S311",
    "S603",
    "S605",
    "S607",
    "B008",
    "B028",
    "S101",
    "B905", # `zip()` without an explicit `strict=` parameter
]
